--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "node ./bin/www",
+    "start:inspect": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* node --inspect ./bin/www",
     "start:dev": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* nodemon ./bin/www"
   },
   "dependencies": {
