--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   ],
   "exports": "./src/index.js",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "scripts": {
     "start": "node ./bin/www",
+    "start:prod": "cross-env NODE_ENV=production node ./bin/www",
     "start:inspect": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* node --inspect ./bin/www",
     "start:dev": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* nodemon ./bin/www"
   },
@@ -32,10 +33,11 @@
     "dotenv-expand": "^12.0.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "http-errors": "~2.0.0",
     "morgan": "~1.10.0",
+    "session-file-store": "^1.5.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
