--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "start": "node ./bin/www",
     "start:prod": "cross-env NODE_ENV=production node ./bin/www",
     "start:inspect": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* node --inspect ./bin/www",
-    "start:dev": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* nodemon ./bin/www"
+    "start:dev": "cross-env  NODE_ENV=development DEBUG=server-sent-events:*  node --watch-path=./src ./bin/www",
+    "start:dev:nodemon": "cross-env  NODE_ENV=development DEBUG=server-sent-events:* nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^1.11.4",
     "bootstrap": "^5.3.5",
     "cookie-parser": "~1.4.7",
-    "cors": "^2.8.5",
-    "datatables.net-bs5": "^2.2.2",
-    "dayjs": "^1.11.13",
+    "cors": "^2.8.5",  
     "debug": "~4.4.0",
     "dotenv": "^16.5.0",
     "dotenv-expand": "^12.0.1",
@@ -41,8 +40,12 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "autocannon": "^8.0.0",
     "c8": "^10.1.3",
+    "chai": "^6.2.0",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.9"
+    "mocha": "^11.7.4",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.4"
   }
 }
